# HitchCos

./: .gitignore  .readthedocs.yaml  CODE_OF_CONDUCT  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api.rst  conf.py  index.rst
docs/contributing/: branching.rst  contributing_function.rst  contributing_test.rst  forking.rst  index.rst
docs/contributing/github/: index.rst
docs/how-to/: examplefuction.rst  index.rst
docs/installation/: index.rst
docs/source/: conf.py
src/: __init__.py  inspect.py
src/listwiz/: .readthedocs.yaml  __init__.py  inspect.py  replace.py  sorting.py
tests/: test_inspect.py  test_replace.py  test_sorting.py
